# AnalysisToolkit

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AnalysisToolkitConfig.cmake.in  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
docs/: CODE_FORMATTING.md  TESTING.md
examples/: CMakeLists.txt  memory_parser_example.cpp  trace_example.cpp
include/AnalysisToolkit/: AnalysisToolkit.h  Hook.h  Logger.h  Monitor.h
modules/hook/: CMakeLists.txt
modules/hook/include/hook/: inline_hook.h
modules/hook/src/: inline_hook.cpp
modules/toolkit/: CMakeLists.txt
modules/toolkit/include/toolkit/: AnalysisToolkit.h
modules/toolkit/src/: AnalysisToolkit.cpp
modules/trace/: CMakeLists.txt
modules/trace/include/trace/: qbdi.h
modules/trace/src/: qbdi.cpp
modules/utility/: CMakeLists.txt
modules/utility/include/utility/: Logger.h  ProcessMemoryParser.h
modules/utility/src/: Logger.cpp  ProcessMemoryParser.cpp
scripts/: format-code.sh  run-tests.sh
src/: AnalysisToolkit.cpp  Hook.cpp  Logger.cpp  Monitor.cpp
tests/: CMakeLists.txt
tests/hook/: test_inline_hook.cpp  test_utils.cpp  test_utils.h
tests/toolkit/: test_analysis_tool_kit.cpp
tests/utility/: test_process_memory_parser.cpp
